--- a/index.html
+++ b/index.html
@@ -1,4 +1,28 @@
 ---
-layout: home
+layout: default
 title: Home
 ---
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>{{ page.title }}</title>
+  <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/style.css">
+</head>
+<body>
+  <!-- 背景视频 -->
+  <div class="background-video-container">
+    <video autoplay muted loop id="background-video">
+      <source src="{{ site.baseurl }}/assets/videos/background.mp4" type="video/mp4">
+    </video>
+  </div>
+
+  <!-- 主页内容 -->
+  <div class="content">
+    <h1>Welcome to My Website</h1>
+    <p>This is the homepage with a video background.</p>
+  </div>
+</body>
+</html>
