--- a/index.html
+++ b/index.html
@@ -12,17 +12,15 @@ title: Home
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/style.css">
 </head>
 <body>
-  <!-- 背景视频 -->
-  <div class="background-video-container">
-    <video autoplay muted loop id="background-video">
-      <source src="{{ site.baseurl }}/assets/videos/background.mp4" type="video/mp4">
-    </video>
+  <!-- 背景图片 -->
+  <div class="background-image-container">
+    <img src="{{ site.baseurl }}/assets/images/background.jpg" alt="Background" id="background-image">
   </div>
 
   <!-- 主页内容 -->
   <div class="content">
     <h1>Welcome to My Website</h1>
-    <p>This is the homepage with a video background.</p>
+    <p>This is the homepage with a background image.</p>
   </div>
 </body>
 </html>
