--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: Home
 <body>
   <!-- 背景图片 -->
   <div class="background-image-container">
-    <img src="{{ site.baseurl }}/assets/images/background.jpg" alt="Background" id="background-image">
+    <img src="{{ site.baseurl }}/assets/img/background.jpg" alt="Background" id="background-img">
   </div>
 
   <!-- 主页内容 -->
